<resources>
    <string name="app_name">TipCalculator</string>
    <string name="textView_billAmountHint">Enter Amount</string>
    <string-array name="numberPeople">
        <item>1 Person</item>
        <item>2 People</item>
        <item>3 People</item>
        <item>4 People</item>
        <item>5 People</item>
        <item>6 People</item>
    </string-array>
    <string name="title_activity_info">InfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="percentSign">%</string>
    <string name="tips">Tips</string>
    <string name="defaultTipValue">$0.00</string>
    <string name="split_bill">Split Bill</string>
    <string name="splitBillDescription">split bill by</string>
    <string name="round_billLabel">Round bill?</string>
    <string name="total_per_personLabel">Total per Person</string>
    <string name="totalPerPersonDefaultValue">$0.00</string>
    <string name="totalLabel">Total</string>
    <string name="AmountLabel">Amount</string>
    <string name="totalBillDefaultValue">$0.00</string>
</resources>