<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.tipcalculator.MainActivity"
    >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/editText_BillAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_marginBottom="@dimen/margin_default"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6"
                android:padding="@dimen/padding_textView_default"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView_BillAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="@dimen/margin_default"
                android:background="@color/backgroundBillAmount"
                android:hint="@string/textView_billAmountHint"
                android:labelFor="@+id/editText_BillAmount"
                android:padding="@dimen/padding_textView_default"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColorHint="#795548"
                android:textStyle="bold"
                android:text="@string/AmountLabel" />

            <TextView
                android:id="@+id/textViewPercent"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="@dimen/labelsMargin"
                android:layout_marginBottom="@dimen/margin_default"
                android:text="@string/percentSign"

                android:textAlignment="center" />


            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="@dimen/barComponentsWidth"
                android:layout_height="@dimen/tipComponentsHeigth"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginBottom="@dimen/margin_default"
                android:max="100"
                android:padding="@dimen/padding_textView_default"
                android:progress="0" />

            <TextView
                android:id="@+id/TipsTextView"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginTop="@dimen/labelsMargin"
                android:text="@string/tips"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tipTextView"
                android:layout_width="@dimen/barComponentsWidth"
                android:layout_height="@dimen/tipComponentsHeigth"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginBottom="@dimen/margin_default"
                android:background="@color/bgtipsandtotal"
                android:text="@string/defaultTipValue"
                android:textAlignment="center"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/split_bill"
                android:layout_marginTop="@dimen/labelsMargin"
                android:layout_marginBottom="@dimen/margin_default"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/numPeople_Spinner"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minHeight="48dp"
                android:layout_marginBottom="@dimen/margin_default"
                android:contentDescription="@string/splitBillDescription"/>

            <TextView
               android:id="@+id/roundLabel"
                android:layout_height="wrap_content"

                android:layout_row="4"
                android:layout_column="1"
                android:textAlignment="center"
                android:text="@string/round_billLabel"
                android:layout_width="74dp"
                />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_marginBottom="@dimen/margin_default">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/NoRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="Tip" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="Total" />
            </RadioGroup>

            <TextView
                android:id="@+id/totalPersonLabel"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_marginTop="@dimen/labelsMargin"
                android:layout_marginBottom="@dimen/margin_default"
                android:text="@string/total_per_personLabel"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/totalPerPerson"
                android:layout_width="@dimen/barComponentsWidth"
                android:layout_height="@dimen/tipComponentsHeigth"
                android:layout_row="6"
                android:layout_column="1"
                android:layout_marginBottom="@dimen/margin_default"
                android:background="@color/bgtipsandtotal"
                android:text="@string/totalPerPersonDefaultValue"
                android:textAlignment="center"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="@dimen/barComponentsWidth"
                android:layout_height="@dimen/tipComponentsHeigth"
                android:layout_row="7"
                android:layout_column="1"
                android:layout_marginBottom="@dimen/margin_default"
                android:background="@color/bgtipsandtotal"
                android:text="@string/totalBillDefaultValue"
                android:textAlignment="center"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/TotalTextview"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_row="7"
                android:layout_column="0"
                android:layout_marginTop="@dimen/labelsMargin"
                android:layout_marginBottom="@dimen/margin_default"
                android:text="@string/totalLabel"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/infoButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@android:drawable/ic_menu_info_details" />
        </GridLayout>
</ScrollView>


